/*
 * $Id: ChangeLog,v 1.1847 2003/12/11 09:02:00 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-12-11 08:30 UTC-0300 Luiz Rafael Culik Guimaraes <culikr@brturbo.com>
  * source/rtl/file.c
    ! Fixed clipper behavior on File function.
	   On clipper file(Directory) return false while in linux was returning true
		 
2003-12-11 16:00 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/filesys.c
    * translate EBADF as 6 for MSVC for Clipper compatibility.

2003-12-11 12:00 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/pp/ppcore.c
    * Increase MAX_EXP to 4096 (previously 2048) to enable pp to process longer
      codes (else harbour.exe will GPF ). Actually, this is an ugly hack, a much
      more elegant solution would be a pp error trapper when codes processed is
      bigger than MAX_EXP. (Per Toninho's report)
  * source/compiler/harbour.slx
    * Minor changes to print correct error message upon unterminated string.
      (Per Patrick Mast report)

2003-12-10 15:15 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * tests/pp.prg
    * Few corrections in PP_CompileLine()

2003-12-10 10:27 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rdd/dbcmd.c
    - Removed redundant error processing in HB_FUNC( DBSELECTAREA )

  * source/rtl/errorsys.prg
    * Minor optimizations

  * source/rtl/win32ole.prg
    + Added support for MK_E_UNAVAILABLE in Ole2TxtError()

  * source/vm/estack.c
    ! Fixed hb_stackDispCall() to report current function too.

2003-12-10 01:45 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * source/rtl/hbffind.c
    ! unix "universal" patter is NOT "*.*"  but "*"

2003-12-10 01:10 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * source/rtl/regex.c
    ! now all the parenthetized expression are parsed, also if one in-lined